# nnsu_gpu_course

./: CMakeLists.txt  README.md
lab1_hello_cuda/: CMakeLists.txt  main.cu
lab2_axpy/: CMakeLists.txt  axpy_cpu.h  main.cu
lab2_axpy/cpu/: CMakeLists.txt  axpy_cpu.cpp
lab2_axpy/cuda/: CMakeLists.txt  axpy_cuda.cu  axpy_cuda.cuh
lab2_axpy/open_mp/: CMakeLists.txt
lab2_axpy/openmp/: axpy_openmp.cpp  axpy_openmp.h
lab3_gemm/: CMakeLists.txt  lab3_output.txt  main.cu
lab3_gemm/cpu/: CMakeLists.txt  gemm_cpu.cpp  gemm_cpu.h
lab3_gemm/cuda/: CMakeLists.txt  gemm_cuda.cu  gemm_cuda.cuh
lab3_gemm/openmp/: CMakeLists.txt  gemm_openmp.cpp  gemm_openmp.h
